--- a/.github/workflows/library-catalog.yml
+++ b/.github/workflows/library-catalog.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies    
       run: npm install
     - name: Start server
-      run: node server/server.js & npx wait-on http://localhost:3030/
+      run: node server/server.js & npx wait-on http://localhost:3030/admin
     - name: Start UI app
       run: npm start & npx wait-on http://localhost:3000
     - name: Run tests
