--- a/.github/workflows/library-catalog.yml
+++ b/.github/workflows/library-catalog.yml
@@ -33,3 +33,13 @@ jobs:
       run: npm start & npx wait-on http://localhost:3000
     - name: Run tests
       run: npm test
+      
+  deploy-to-production:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.RENDER_TOKEN }}
+          api-key: ${{ secrets.RENDER_API_KEY }}
