--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@playwright/test": "^1.36.2",
         "lit-html": "^1.3.0",
         "page": "^1.11.6"
     },
